main_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uuidgen-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uuidgen
  template:
    metadata:
      labels:
        app: uuidgen
    spec:
      volumes: # Define volume
        - name: shared-file
          emptyDir: {}
      containers:
        - name: uuidgen-write
          image: tonipikkarainen/uuidgen-write
          volumeMounts: # Mount volume
            - name: shared-file
              mountPath: /tmp/src/app/files
        - name: uuidgen-read
          image: tonipikkarainen/uuidgen-read
          volumeMounts: # Mount volume
            - name: shared-file
              mountPath: /tmp/src/app/files
