main_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uuidgen-svc
spec:
  type: ClusterIP
  selector:
    app: uuidgen
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
